plugins {
  id 'java-library'
  id 'idea'
  id 'maven-publish'

  id("io.freefair.lombok")   version "latest.release" // id 'io.franzbecker.gradle-lombok' version 'latest.release'
  id("name.remal.sonarlint") version "latest.release" // https://github.com/remal-gradle-plugins/sonarlint + https://lift.sonatype.com/
  id("net.ltgt.errorprone")  version "latest.release" // https://errorprone.info/
}

repositories {
  mavenLocal()
  mavenCentral()
}

sourceCompatibility = 17

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
  options.release.set(17) // javac --release 7..18+
  options.deprecation = false // todo step2: deprecated

  options.errorprone {
    enabled = true
    disableWarningsInGeneratedCode = true
    excludedPaths = ".*/build/gen.*/.*"
    disable("ParameterName")
    disable("UnusedVariable")
    errorproneArgs = ["--illegal-access=warn"]
  }
}
// https://docs.gradle.org/current/userguide/publishing_maven.html
publishing {
  publications { // artifactId → folder name
    maven(MavenPublication){
      from components.java
    }
  }
}
java {
  withSourcesJar()
//  withJavadocJar()
}

dependencies {
  errorprone "com.google.errorprone:error_prone_core:latest.release"
  implementation("com.google.code.findbugs:jsr305:latest.release") // https://javadoc.io/doc/com.google.code.findbugs/jsr305/latest/index.html
  implementation("com.google.errorprone:error_prone_annotations:latest.release") // https://javadoc.io/doc/com.google.errorprone/error_prone_annotations/latest/index.html

  implementation 'javax.servlet:servlet-api:2.5'

  implementation("org.codehaus.groovy:groovy:3.+")
  implementation("com.github.ben-manes.caffeine:caffeine:latest.release")


  implementation project(':click')

  //*** TEST TEST TEST

  testImplementation 'junit:junit:4.+'
  testImplementation 'org.mockito:mockito-inline:+'

  testImplementation project(':click-mock')
}

idea {
  module {
    downloadJavadoc = true
    downloadSources = true
  }
}

test {
  useJUnit()
  maxHeapSize = "500m"
  enableAssertions = true

  testLogging.showStandardStreams = true // show standard out & err of the test JVM on the console

  System.setProperty("slf4j.detectLoggerNameMismatch", "true")
  System.setProperty("file.encoding", "UTF-8")
  System.setProperty("user.language", "en")
  Locale.setDefault(new Locale("en", "US"));
}

lombok {
  version = "latest.release"
}
sonarLint {
  ignoreFailures = true
}